# android_perfd

./: .gitignore  CMakeLists.txt  build.py
agent/: CMakeLists.txt
cmake/: protoc.cmake
perfa/: CMakeLists.txt
perfd/: CMakeLists.txt  perfd.cc
perfd/gpu/: gpu_cache.cc  gpu_cache.h  gpu_collector.cc  gpu_collector.cpp  gpu_collector.h  gpu_profiler_component.h  gpu_service.cc  gpu_service.h  gpu_usage_sampler.cc  gpu_usage_sampler.cpp  gpu_usage_sampler.h
protos/: gpu.proto
tools/: __init__.py  android.py  common.py  download.py  msvc.py  win_pack.py  windows.py
utils/: CMakeLists.txt
